Improve the function of adding pages

--- a/templates/react-mobx/resources/htmls/page1.html
+++ b/templates/react-mobx/resources/htmls/page1.html
@@ -8,6 +8,7 @@
 <#-headElements />
 <body>
 <#-resourceElements />
+<#-if #{!(useLayout)}#><link href="/resources/app/css/common.css?ver=<%=ver%>" rel="stylesheet" /></#-if>
 </#-if>
   <link href="/resources/app/css/pages/page1/container.css?ver=<%=ver%>" rel="stylesheet" />
   <section id="container"></section>
