--- a/templates/sourceFiles/react-mobx/resources/htmls/newPage.html
+++ b/templates/sourceFiles/react-mobx/resources/htmls/newPage.html
@@ -8,7 +8,7 @@
 <#-headElements />
 <body>
 <#-resourceElements />
-<#-if #{!(useLayout)}#><link href="/resources/app/css/common.css?ver=<%=ver%>" rel="stylesheet" /></#-if>
+<link href="/resources/app/css/common.css?ver=<%=ver%>" rel="stylesheet" />
 </#-if>
   <link href="/resources/app/css/pages/#{pageName}#/container.css?ver=<%=ver%>" rel="stylesheet" />
   <section id="container"></section>
