--- a/templates/react-mobx/resources/htmls/page2.html
+++ b/templates/react-mobx/resources/htmls/page2.html
@@ -8,7 +8,7 @@
 <#-headElements />
 <body>
 <#-resourceElements />
-<#-if #{!(useLayout)}#><link href="/resources/app/css/common.css?ver=<%=ver%>" rel="stylesheet" /></#-if>
+<link href="/resources/app/css/common.css?ver=<%=ver%>" rel="stylesheet" />
 </#-if>
   <link href="/resources/app/css/pages/page2/container.css?ver=<%=ver%>" rel="stylesheet" />
   <section id="container"></section>
