--- a/templates/react-mobx/templates/src/pages/newPage/newPage.t.html
+++ b/templates/react-mobx/templates/src/pages/newPage/newPage.t.html
@@ -3,10 +3,10 @@
                 showPageSize={true}
                 showDataCount={true}
                 showDataFilter={true}
-                tableProps="{obj(
-                              'size' : 'middle',
-                              'rowKey' : 'vendorCode'
-                            )}"
+                :tableProps="{
+                  size: 'middle',
+                  rowKey: 'vendorCode'
+                }"
                 {columns}
                 {rowSelection}
                 {onPageChange}
