Upgrade to React v16

--- a/templates/react-mst/src/web/components/header/header.t.html
+++ b/templates/react-mst/src/web/components/header/header.t.html
@@ -6,7 +6,7 @@
   </ul>
   <div class="login-wrap middle">
     <a class="link">{store.common.('userInfo').('pin')}</a>
-    <a class="avatar"><img src="{headerPic}" alt=""></a>
+    <a class="avatar"><img src="{headerPic}" :alt="''"></a>
     <a class="link" href={logoutUrl}>注销</a>
   </div>
 </header>
