--- a/templates/react-mst/templates/src/web/pages/newPageChart/newPage.m.scss
+++ b/templates/react-mst/templates/src/web/pages/newPageChart/newPage.m.scss
@@ -49,7 +49,7 @@
         table{
           table-layout: fixed;width:100%;font-size:12px;margin-top:10px;border:1px solid #eee;
           th{
-            font-weight: normal;background: #eee;padding:5px 0;
+            font-weight: normal;background: #eee;padding:5px 0;text-align:center;
             &:last-of-type{
               width:25%
             }
