--- a/templates/react-mst/src/web/pages/page1/page1.t.html
+++ b/templates/react-mst/src/web/pages/page1/page1.t.html
@@ -1,6 +1,6 @@
 <template name="container">
-  <div class="{styles.page1_1}">
-    <h2>角色管理1-1</h2>
+  <div class="{styles.page1}">
+    <h2>角色管理 page1</h2>
     <div class="{styles.handlerBox}">
       <span class="{styles.lable}">角色名称</span>
       <ant-input class="{styles.input}" value="{inputRole}" onChange={onInputRole}/>
@@ -14,40 +14,40 @@
                dataSource={toJS(tableData)}
                bordered />
 
-    <ModalForm1-1 tabName="增加角色" />
-    <ModalForm1-1 tabName="编辑角色" />
-    <ModalDetail1-1 />
+    <ModalFormPage1 tabName="增加角色" />
+    <ModalFormPage1 tabName="编辑角色" />
+    <ModalDetailPage1 />
   </div>
 </template>
 
 <template name="modalForm">
-  <ant-Modal width={500} visible="{tabName == '增加角色' ? (page1_1.addModalVisible, page1_1.editModalVisible)}" footer={null} onCancel={onAddModalCancel}>
-    <ant-Tabs activeKey={page1_1.activeKey} onChange={onTabChange}>
+  <ant-Modal width={500} visible="{tabName == '增加角色' ? (page1.addModalVisible, page1.editModalVisible)}" footer={null} onCancel={onAddModalCancel}>
+    <ant-Tabs activeKey={page1.activeKey} onChange={onTabChange}>
       <ant-TabPane tab="增加角色" key="tab1">
         <ul class="frombox">
           <li>角色名称 <span class="red"></span></li>
-          <li><ant-input onChange={onAddInputRoleChange} value="{page1_1.addInputRole}"/></li>
+          <li><ant-input onChange={onAddInputRoleChange} value="{page1.addInputRole}"/></li>
           <li>角色描述</li>
-          <li><ant-TextArea rows={4} onChange={onAddInputDesChange} class="textarea" value="{page1_1.addInputDes}" /></li>
+          <li><ant-TextArea rows={4} onChange={onAddInputDesChange} class="textarea" value="{page1.addInputDes}" /></li>
           <li class="{styles.btnArea}">
             <ant-Button class="btn" onClick={onAddSaveRole}>保存</ant-Button>
             <ant-Button class="btn" onClick={onAddCancel}>取消</ant-Button>
           </li>
         </ul>
       </ant-TabPane>
-      <ant-TabPane tab="配置权限" key="tab2" disabled="{tabName == '增加角色' ? page1_1.isDisable}">
+      <ant-TabPane tab="配置权限" key="tab2" disabled="{tabName == '增加角色' ? page1.isDisable}">
         <div class="{styles.treeWrap}">
           <ant-Tree checkable
                     onExpand={onExpand}
-                    expandedKeys={toJS(page1_1.expandedKeys)}
+                    expandedKeys={toJS(page1.expandedKeys)}
                     {autoExpandParent}
                     onCheck={onCheck}
-                    checkedKeys={toJS(page1_1.checkedKeys)}>
+                    checkedKeys={toJS(page1.checkedKeys)}>
             {loop(treeData)}
           </ant-Tree>
         </div>
         <div class="{styles.btnArea}">
-          <ant-Button class="btn" onClick={onSavePermission} disabled="{tabName == '编辑角色' ? page1_1.saveBtnDisabled}">保存</ant-Button>
+          <ant-Button class="btn" onClick={onSavePermission} disabled="{tabName == '编辑角色' ? page1.saveBtnDisabled}">保存</ant-Button>
           <ant-Button class="btn" onClick={onAddCancel}>取消</ant-Button>
         </div>
       </ant-TabPane>
@@ -56,10 +56,10 @@
 </template>
 
 <template name="modalDetail">
-  <ant-Modal width={800} visible={page1_1.detailModalVisible} footer={null} onCancel={onDetailModalCancel}>
+  <ant-Modal width={800} visible={page1.detailModalVisible} footer={null} onCancel={onDetailModalCancel}>
     <@title>
       <div class={styles.modalTitle}>用户明细</div>
     </@title>
-    <ant-Table pagination={true} columns={toJS(detailColumns)} dataSource={toJS(page1_1.detailData)} rowKey={getDetailRowKey} bordered />
+    <ant-Table pagination={true} columns={toJS(detailColumns)} dataSource={toJS(page1.detailData)} rowKey={getDetailRowKey} bordered />
   </ant-Modal>
 </template>
