Updated react-mobx boilerplate

--- a/templates/react-mobx/resources/htmls/index.html
+++ b/templates/react-mobx/resources/htmls/index.html
@@ -14,8 +14,10 @@
   <script type="text/nornj" data-auto data-target="#container">
     <Container>
       <#tmpl>
-        <ant-Button type="primary" onClick={goPage1}>页面1</ant-Button>
-        <ant-Button type="primary" onClick={goPage2}>页面2</ant-Button>
+        <div>
+          <ant-Button type="primary" onClick={goPage1}>页面1</ant-Button>
+          <ant-Button type="primary" onClick={goPage2}>页面2</ant-Button>
+        </div>
       </#tmpl>
     </Container>
   </script>
