--- a/templates/react-mobx/resources/styles/base.less
+++ b/templates/react-mobx/resources/styles/base.less
@@ -8,11 +8,11 @@ html {
   background-color: #ECECEC !important;
 }
 
-.vicb-pagecontainer {
+.fjb-pagecontainer {
   .fj-util-border-box;
 }
 
-.vicb-header {
+.fjb-header {
   height: 70px;
   width: 100%;
   background-color: #404040;
@@ -23,13 +23,13 @@ html {
   line-height: 70px;
 }
 
-.vicb-body {
+.fjb-body {
   padding-top: 70px;
   padding-left: 200px;
   .fj-util-border-box;
 }
 
-.vicb-aside {
+.fjb-aside {
   padding-top: 70px;
   .fj-util-border-box;
   background-color: #fff;
@@ -41,18 +41,18 @@ html {
   height: 100%;
 }
 
-.vicb-main {
+.fjb-main {
   padding: 15px 25px;
 }
 
-.vicb-content {
+.fjb-content {
   background-color: #fff;
   min-height: 800px;
   margin-top: 15px;
   padding: 20px;
 }
 
-.vicb-logo {
+.fjb-logo {
   width: 120px;
   height: 31px;
   background: #333;
