--- a/templates/react-mobx/src/components/header/header.t.html
+++ b/templates/react-mobx/src/components/header/header.t.html
@@ -1,6 +1,6 @@
-<header class="vicb-header">
-  <div class="vicb-logo" />
-  <ant-Menu theme="dark" mode="horizontal" class="{styles.nav}" defaultSelectedKeys="{list(no)}" {onSelect}>
+<header class="fjb-header">
+  <div class="fjb-logo" />
+  <ant-Menu theme="dark" mode="horizontal" class="{styles.nav}" defaultSelectedKeys="{[no]}" {onSelect}>
     <ant-MenuItem key="1">page1</ant-MenuItem>
     <ant-MenuItem key="2">page2</ant-MenuItem>
     <ant-MenuItem key="3">page3</ant-MenuItem>
