--- a/templates/react-mobx/src/components/sider/sider.t.html
+++ b/templates/react-mobx/src/components/sider/sider.t.html
@@ -1,5 +1,5 @@
 <div class="{styles.sider}">
-  <ant-Menu mode="inline" defaultSelectedKeys="{list('1')}" defaultOpenKeys="{list('sub1')}">
+  <ant-Menu mode="inline" defaultSelectedKeys="{['1']}" defaultOpenKeys="{['sub1']}">
     <ant-SubMenu key="sub1">
       <@title>
         <span><ant-Icon type="user" />subnav 1</span>
