--- a/templates/react-mobx/resources/htmls/common/resourceElements.html
+++ b/templates/react-mobx/resources/htmls/common/resourceElements.html
@@ -1,16 +1,16 @@
 <!--loading遮罩层-->
 <style type="text/css">
-  .vic-vertical-center1 {
+  .fjb-vertical-center1 {
     display: table;
     overflow: hidden;
   }
 
-  .vic-vertical-center2 {
+  .fjb-vertical-center2 {
     vertical-align: middle;
     display: table-cell;
   }
 
-  #vic_loading-mask_main {
+  #fjb_loading-mask_main {
     position: absolute;
     left: 0;
     top: 0;
@@ -20,28 +20,28 @@
     background-color: #fff;
   }
 
-  #vic_loading_main img {
+  #fjb_loading_main img {
     margin-bottom: 2px;
     width: 79px;
     height: 4px;
     vertical-align: middle;
   }
 
-  #vic_loading_main i {
+  #fjb_loading_main i {
     font-size: 1.2rem;
     color: #48a3e7;
   }
 
-  #vic_loading_main span {
+  #fjb_loading_main span {
     margin-left: 3px;
   }
 
-  #vic_loading_main .vic-vertical-center1 {
+  #fjb_loading_main .fjb-vertical-center1 {
     width: 100%;
     height: 100%;
   }
 
-  #vic_loading_main {
+  #fjb_loading_main {
     background-color: #fff;
     position: fixed;
     left: 0;
@@ -55,10 +55,10 @@
     font: bold 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
 </style>
-<div id="vic_loading-mask_main">&#160;</div>
-<div id="vic_loading_main">
-  <div class="vic-vertical-center1">
-    <div class="vic-vertical-center2">
+<div id="fjb_loading-mask_main">&#160;</div>
+<div id="fjb_loading_main">
+  <div class="fjb-vertical-center1">
+    <div class="fjb-vertical-center2">
       <i class="fa fa-spinner fa-pulse"></i><span>正在加载中,请稍候...</span>
     </div>
   </div>
