--- a/templates/react-mobx/resources/htmls/index.html
+++ b/templates/react-mobx/resources/htmls/index.html
@@ -7,7 +7,7 @@
 <#-headElements />
 <body>
 <#-resourceElements />
-<#-if #{!(useLayout)}#><link href="/resources/app/css/common.css?ver=<%=ver%>" rel="stylesheet" /></#-if>
+<link href="/resources/app/css/common.css?ver=<%=ver%>" rel="stylesheet" />
 </#-if>
   <link href="/resources/app/css/pages/container.css?ver=<%=ver%>" rel="stylesheet" />
   <section id="container"></section>
