--- a/templates/react-mst/src/web/components/sider/sider.t.html
+++ b/templates/react-mst/src/web/components/sider/sider.t.html
@@ -1,12 +1,12 @@
 <template name="menuCnt">
   <#if {item.type == 'item'}>
-    <router-Link key={item.index} to={item.link} onClick={selectMenu(item.index)} class="menu-item {store.sider.current.toLowerCase() == item.index.toLowerCase() ? ('cur', '')}">
+    <router-Link key={item.index} to={item.link} onClick={selectMenu(item.index)} class="menu-item {store.sider.current.toLowerCase() == item.index.toLowerCase() ?: ('cur', '')}">
       {item.name}
     </router-Link>
     <#elseif {item.type == 'group'}>
       <div key={item.name} class="menu-group">
         <div class="menu-tit" onClick={toggleMenu(item)}><ant-Icon type="book" style="margin-right:3px;" />{item.name}</div>
-        <div class="menu-cnt {item.expanded ? ('expanded', '')}" style="height: {item.expanded ?(item.children.length * 40, 0)}px">
+        <div class="menu-cnt {item.expanded ?: ('expanded', '')}" style="height: {item.expanded ?: (item.children.length * 40, 0)}px">
           {generateMenu(item.children)}
         </div>
       </div>
