--- a/templates/react-mst-universal/src/web/pages/formExample/formExample.m.scss
+++ b/templates/react-mst-universal/src/web/pages/formExample/formExample.m.scss
@@ -1,4 +1,4 @@
-.formExample{
+.formExample {
   padding: 100px 100px 40px 30px;
   background-color: #fff;
 
@@ -9,7 +9,7 @@
 }
 
 .formEls {
-  padding: 5px 80px 20px 80px;
+  padding: 5px 80px 20px;
 }
 
 .btnArea {
